# GeniusTradeTracker

./: .gitignore  README.md
tracker/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
tracker/app/: router.py
tracker/app/akshare/: akshare.ipynb  akshare_intraday.ipynb  akshare行业与概念板块.ipynb  baostock.ipynb  stock_code_name.csv
tracker/app/api/: deps.py  routers.py
tracker/app/common/: log.py  model.py
tracker/app/core/: conf.py  db.py  path_conf.py  register.py
tracker/app/crud/: __init__.py  crud_artist.py  crud_stock_board_concept_cons_em.py  crud_stock_board_concept_em.py  crud_stock_board_concept_em_realtime.py  crud_stock_board_industry_cons_em.py  crud_stock_board_industry_em.py  crud_stock_board_industry_em_realtime.py  crud_stock_change_abnormal.py  crud_stock_comment.py  crud_stock_company_event.py  crud_stock_cyq_em.py  crud_stock_exchange.py  crud_stock_fund_big_deal.py  crud_stock_fund_concept_detail_intraday.py  crud_stock_fund_concept_detail_rank.py  crud_stock_fund_concept_intraday.py  crud_stock_fund_concept_rank.py  crud_stock_fund_industry_detail_intraday.py  crud_stock_fund_industry_detail_rank.py  crud_stock_fund_industry_intraday.py  crud_stock_fund_industry_rank.py  crud_stock_fund_market_detail.py  crud_stock_fund_single_detail_intraday.py  crud_stock_fund_single_detail_rank.py  crud_stock_fund_single_detail_realtime.py  crud_stock_fund_single_intraday.py  crud_stock_fund_single_rank.py  crud_stock_history.py  crud_stock_history_bao_k.py  crud_stock_info.py  (+30 more)
tracker/core/: __init__.py  conf.py  register.py
(+192 files in other folders)
